OO-3489, OO-3492, OO-3493, OO-3494, OO-3496, OO-3497: infrastructure to export user data, export  portraits, notes, personal folder, calendars, subscriptions, delete calendars after usser deletion